--- a/src/app/book/components/book-details/book-details.component.html
+++ b/src/app/book/components/book-details/book-details.component.html
@@ -2,18 +2,39 @@
       [formGroup]="bookForm"
       #bookFormDirective="ngForm"
       [class.ng-submitted]="bookFormDirective.submitted">
-  <div class="mb-3">
-    <label for="author" class="form-label">Author:</label>
-    <input type="text" id="author"
-           class="form-control"
-           formControlName="author">
-    <ba-error-messages [of]="bookForm.get('author')"></ba-error-messages>
-  </div>
+  <ng-container formGroupName="author">
+    <div class="mb-3">
+      <label for="firstname" class="form-label">First Name:</label>
+      <input type="text" id="firstname"
+             class="form-control"
+             formControlName="firstname"
+             [ngClass]="{'is-invalid':bookForm.get('author.firstname')?.invalid }">
+      <span class="invalid-feedback">
+        <span *ngIf ="bookForm.get('author.firstname')?.errors?.required" >Please provide a value </span>
+        <span *ngIf ="bookForm.get('author.firstname')?.errors?.maxlength" >Provide value is too long ({{bookForm.get('author.firstname')?.errors?.maxlength.actualLength}}) </span>
+      </span>
+    </div>
+    <div class="mb-3">
+      <label for="lastname" class="form-label">Last Name:</label>
+      <input type="text" id="lastname"
+             class="form-control"
+             formControlName="lastname"
+             [ngClass]="{'is-invalid':bookForm.get('author.lastname')?.invalid }">
+      <span class="invalid-feedback">
+        <span *ngIf ="bookForm.get('author.lastname')?.errors?.required" >Please provide a value </span>
+        <span *ngIf ="bookForm.get('author.lastname')?.errors?.maxlength" >Provide value is too long ({{bookForm.get('author.lastname')?.errors?.maxlength.actualLength}}) </span>
+      </span>
+    </div>
+  </ng-container>
   <div class="mb-3">
     <label for="title" class="form-label">Title:</label>
     <input id="title" class="form-control"
-           formControlName="title">
-    <ba-error-messages [of]="bookForm.get('title')"></ba-error-messages>
+           formControlName="title"
+           [ngClass]="{'is-invalid':bookForm.get('title')?.invalid }">
+    <span class="invalid-feedback">
+        <span *ngIf ="bookForm.get('title')?.errors?.required" >Please provide a value </span>
+        <span *ngIf ="bookForm.get('title')?.errors?.maxlength" >Provide value is too long ({{bookForm.get('title')?.errors?.maxlength.actualLength}}) </span>
+      </span>
   </div>
   <button type="submit" class="btn btn-primary">Save</button>
 </form>
