--- a/src/app/book/components/book-overview/book-overview.component.html
+++ b/src/app/book/components/book-overview/book-overview.component.html
@@ -10,7 +10,7 @@
   <tr *ngFor="let book of (books$ | async); index as i"
       (click)="goToDetailsOf(book)">
     <th scope="row">{{i+1}}</th>
-    <td>{{book.author}}</td>
+    <td>{{book.author.firstname}} {{book.author.lastname}}</td>
     <td>{{book.title}}</td>
   </tr>
   </tbody>
