--- a/src/app/shared/details-nested-form/details-nested-form.component.html
+++ b/src/app/shared/details-nested-form/details-nested-form.component.html
@@ -6,6 +6,7 @@
         id="publishedYear"
         class="form-control"
         formControlName="publishedYear"
+        baIsInvalidClass
       ></ba-number-input>
     </ba-basic-validation-output>
   </div>
@@ -15,6 +16,7 @@
       <input type="text" id="isbn"
              class="form-control"
              formControlName="isbn"
+             baIsInvalidClass
       >
     </ba-basic-validation-output>
   </div>
